# django-nepali

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  manage.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
django_nepali/templatetags/: nepalidatetime.py  nepalinumber.py
django_nepali_example/: README.md  models.py  settings.py
django_nepali_example/migrations/: 0001_initial.py
django_nepali_example/tests/template_tags/: test_nepalidatetime.py  test_nepalinumber.py
django_nepali_example/tests/template_tags/fixtures/: nepalidatetime.py  nepalinumber.py
