[metadata]
name = django-nepali
version = 0.1.0
author = opensource-nepal
author_email = aj3sshh@gmail.com, sugatbajracharya49@gmail.com
description = A django package on top of 'nepali' a python package which supports nepali date time, time conversion, etc on django projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, nepali date conversion, convert date, nepali date time, python convert date, parse nepali date time
url = https://github.com/opensource-nepal/django-nepali
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: Web Environment
    Operating System :: OS Independent
    Framework :: Django

[options]
packages = find:
install_requires =
    Django
    nepali>=1.0.0
